Fixed overflowx issues.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -6,6 +6,7 @@ html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
